doc: Update documents

--- a/docs/release-notes/v2.3.1-RELEASE-NOTES.md
+++ b/docs/release-notes/v2.3.1-RELEASE-NOTES.md
@@ -1,33 +1,34 @@
-# 🚀 KMP WorkManager v2.3.1 - Release Notes
+# KMP WorkManager v2.3.1 - Release Notes
 
 **Release Date:** February 10, 2026
 **Type:** Critical Bug Fix Release
-**Status:** ✅ Production Ready
+**Status:** Production Ready
 
 ---
 
-## 📋 Overview
+## Overview
 
-Version 2.3.1 is a **CRITICAL STABILITY AND SECURITY RELEASE** addressing 14 bugs across critical, high-priority, and medium-priority categories. This release focuses on production stability, security hardening, and functional correctness.
+Version 2.3.1 addresses 14 bugs across critical, high-priority, and medium-priority categories, focusing on production stability, security hardening, and functional correctness.
 
-**All fixes are BACKWARD COMPATIBLE** - No breaking changes.
+All fixes are backward compatible - no breaking changes.
 
 ---
 
-## 🎯 Summary
+## Summary
 
 | Category | Fixed | Status |
 |----------|-------|--------|
-| **Critical Bugs** | 4 | ✅ 100% |
-| **High Priority Bugs** | 5 | ✅ 100% |
-| **Medium Priority Bugs** | 5 | ✅ 100% |
-| **Total** | **14** | ✅ **100%** |
+| Critical Bugs | 4 | Fixed |
+| High Priority Bugs | 5 | Fixed |
+| Medium Priority Bugs | 5 | Fixed |
+| **Total** | **14** | **Complete** |
 
 ---
 
-## 🔴 CRITICAL FIXES (4)
+## Critical Fixes (4)
 
-### Fix #1: Android Exact Alarm Delay Calculation ⏰
+### Fix #1: Android Exact Alarm Delay Calculation
+
 **Impact:** Exact alarms scheduled in far future instead of correct time
 **Root Cause:** Used absolute epoch timestamp as delay value
 
@@ -46,7 +47,8 @@ initialDelayMs = delayMs
 
 ---
 
-### Fix #2: iOS Chain Continuation Callback 🔗
+### Fix #2: iOS Chain Continuation Callback
+
 **Impact:** Long iOS background chains failed after 30 seconds
 **Root Cause:** `scheduleNextBGTask()` was placeholder, never scheduled continuation
 
@@ -66,7 +68,8 @@ class ChainExecutor(
 
 ---
 
-### Fix #3: Koin Scope Isolation 🔒
+### Fix #3: Koin Scope Isolation
+
 **Impact:** Conflicts with host app Koin, crashes with multiple instances
 **Root Cause:** Used global Koin via `by inject()` delegate
 
@@ -85,7 +88,8 @@ private val workerFactory: AndroidWorkerFactory =
 
 ---
 
-### Fix #4: KmpHeavyWorker Usage 💪
+### Fix #4: KmpHeavyWorker Usage
+
 **Impact:** Heavy tasks didn't use foreground service on Android 12+
 **Root Cause:** Always created `KmpWorker` instead of `KmpHeavyWorker`
 
@@ -103,9 +107,10 @@ return if (constraints.isHeavyTask) {
 
 ---
 
-## 🟠 HIGH PRIORITY FIXES (5)
+## High Priority Fixes (5)
 
-### Fix #5: File Size Validation (100MB Limit) 📦
+### Fix #5: File Size Validation (100MB Limit)
+
 **Impact:** Large file uploads caused OOM crashes
 **Solution:** Added 100MB limit with clear error message
 
@@ -120,7 +125,8 @@ if (fileSize > maxSize) {
 
 ---
 
-### Fix #6: URL Validation (SSRF Prevention) 🛡️
+### Fix #6: URL Validation (SSRF Prevention)
+
 **Impact:** Vulnerable to SSRF attacks
 **Solution:** Comprehensive URL validation
 
@@ -139,7 +145,8 @@ if (!SecurityValidator.validateURL(config.url)) {
 
 ---
 
-### Fix #7: HTTP Client Resource Leak 💧
+### Fix #7: HTTP Client Resource Leak
+
 **Impact:** HTTP client handles leaked, causing resource exhaustion
 **Solution:** Proper cleanup in finally block
 
@@ -158,7 +165,8 @@ return try {
 
 ---
 
-### Fix #8: iOS Flush Race Condition 🏁
+### Fix #8: iOS Flush Race Condition
+
 **Impact:** Concurrent `flushNow()` calls caused data corruption
 **Solution:** `CompletableDeferred` for proper synchronization
 
@@ -173,7 +181,8 @@ private var flushCompletionSignal: CompletableDeferred<Unit>? = null
 
 ---
 
-### Fix #9: ChainExecutor Close Deadlock 🔓
+### Fix #9: ChainExecutor Close Deadlock
+
 **Impact:** App froze during shutdown
 **Solution:** Non-blocking `close()`, added `closeAsync()`
 
@@ -194,9 +203,10 @@ override fun close() {
 
 ---
 
-## 🟡 MEDIUM PRIORITY FIXES (5)
+## Medium Priority Fixes (5)
 
-### Fix #10: Queue Memory Optimization 💾
+### Fix #10: Queue Memory Optimization
+
 **Impact:** Large queues (10K+ tasks) caused OOM
 **Solution:** Read in 8KB chunks instead of loading full file
 
@@ -214,7 +224,8 @@ while (true) {
 
 ---
 
-### Fix #11: SingleTaskExecutor Scope Leak 🔌
+### Fix #11: SingleTaskExecutor Scope Leak
+
 **Impact:** Coroutine scope leak
 **Solution:** Use managed scope
 
@@ -231,7 +242,8 @@ coroutineScope.launch(Dispatchers.Main) { }
 
 ---
 
-### Fix #12: iOS Migration Await ⏳
+### Fix #12: iOS Migration Await
+
 **Impact:** Race condition - `enqueue()` ran before migration completed
 **Solution:** `CompletableDeferred` to await migration
 
@@ -249,7 +261,8 @@ actual override suspend fun enqueue(...) {
 
 ---
 
-### Fix #13: Queue Compaction Atomicity ⚛️
+### Fix #13: Queue Compaction Atomicity
+
 **Impact:** Queue corruption during compaction
 **Solution:** Use `replaceItemAtURL` for atomic operation
 
@@ -264,18 +277,18 @@ NSFileManager.defaultManager.replaceItemAtURL(...)
 
 ---
 
-### Fix #14: Dead Code Removal 🧹
+### Fix #14: Dead Code Removal
+
 **Impact:** Code clarity
 **Solution:** Removed unused `TAG` constants
 
 ---
 
-## 🧪 Test Coverage
+## Test Coverage
 
 ### Statistics
-- **Total Tests:** 108+
+- **Total Tests:** 93 tests for v2.3.1 fixes
 - **Test Files:** 8
-- **Lines of Test Code:** 4,174
 - **Coverage:** 100% of all bug fixes
 
 ### Test Files
@@ -290,43 +303,39 @@ NSFileManager.defaultManager.replaceItemAtURL(...)
 
 ---
 
-## 🔒 Security Improvements
+## Security Improvements
 
-### SSRF Prevention ✅
+### SSRF Prevention
 - Blocks localhost, private IPs, metadata endpoints
 - Protocol validation (HTTP/HTTPS only)
 - Applied to all HTTP workers
 
-### Resource Protection ✅
+### Resource Protection
 - 100MB file upload limit
 - HTTP client cleanup
 - Memory optimization
 
-**Security Rating:** 9/10 - Enterprise Grade
-
 ---
 
-## 💪 Stability Improvements
+## Stability Improvements
 
-### Race Conditions Fixed ✅
+### Race Conditions Fixed
 - iOS flush synchronization
 - iOS migration synchronization
 
-### Deadlock Prevention ✅
+### Deadlock Prevention
 - ChainExecutor close non-blocking
 
-### Memory Leaks Prevented ✅
+### Memory Leaks Prevented
 - Queue optimization (O(n) → O(1))
 - Scope leak prevention
 - HTTP client cleanup
 
-**Stability Rating:** 9/10 - Production Stable
-
 ---
 
-## 📦 Migration Guide
+## Migration Guide
 
-### No Breaking Changes! ✅
+### No Breaking Changes
 
 **Upgrade Steps:**
 1. Update dependency:
@@ -342,44 +351,36 @@ NSFileManager.defaultManager.replaceItemAtURL(...)
 
 ---
 
-## ✅ Production Readiness
+## Production Readiness
 
 ### Build Status
-- ✅ Android: Builds successfully
-- ✅ Common: All modules compile
-- ⚠️ iOS: Pre-existing test issues (not from v2.3.1)
+- Android: Builds successfully
+- Common: All modules compile
+- iOS: Pre-existing test issues (not from v2.3.1)
 
 ### Quality Metrics
-| Metric | Score | Status |
-|--------|-------|--------|
-| Code Quality | 9/10 | ✅ Excellent |
-| Security | 9/10 | ✅ Hardened |
-| Stability | 9/10 | ✅ Robust |
-| Test Coverage | 10/10 | ✅ Complete |
+All critical issues resolved with comprehensive test coverage.
 
 ### Recommendation
-**✅ APPROVED FOR PRODUCTION RELEASE**
-
-**Confidence:** 95%
-**Risk Level:** VERY LOW
+Approved for production release.
 
 ---
 
-## 📊 What's Changed
+## What's Changed
 
-### Added ✨
+### Added
 - SSRF protection with URL validation
 - 100MB file size limit for uploads
 - Non-blocking close with `closeAsync()`
-- Comprehensive test suite (108+ tests)
+- Comprehensive test suite (93 tests)
 
-### Fixed 🐛
+### Fixed
 - 14 critical/high/medium priority bugs
 - Race conditions and deadlocks
 - Memory leaks and OOM issues
 - Security vulnerabilities
 
-### Changed 🔄
+### Changed
 - Queue line counting (O(n) → O(1) memory)
 - HTTP client management (proper cleanup)
 - Koin dependency resolution (isolated scope)
@@ -387,13 +388,7 @@ NSFileManager.defaultManager.replaceItemAtURL(...)
 
 ---
 
-## 🙏 Acknowledgments
-
-This release was developed with comprehensive PM/BA/Developer/Reviewer analysis following 20 years of mobile development best practices (native and cross-platform Flutter/KMP).
-
----
-
-## 🔗 Resources
+## Resources
 
 - **Repository:** https://github.com/brewkits/kmpworkmanager
 - **Documentation:** [README.md](../../README.md)
@@ -403,4 +398,4 @@ This release was developed with comprehensive PM/BA/Developer/Reviewer analysis 
 
 **Version:** 2.3.1
 **Release Date:** 2026-02-10
-**Status:** ✅ Production Ready
+**Status:** Production Ready
